add download for all local assets

--- a/setup.cfg
+++ b/setup.cfg
@@ -21,8 +21,8 @@ per-file-ignores =
   page_loader/scripts/*.py: WPS421
   # it is possibble to have variable and logic in __init__
   page_loader/__init__.py: WPS410, WPS412
-  # it is possibble to have many local variables:
-  page_loader/download.py: WPS210
+  # it is possibble to have line break before binary operator
+  page_loader/download.py: W503
 
 [tool:pytest]
 norecursedirs = __pycache__
