--- a/setup.cfg
+++ b/setup.cfg
@@ -22,7 +22,9 @@ per-file-ignores =
   # it is possibble to have variable and logic in __init__
   page_loader/__init__.py: WPS410, WPS412
   # it is possibble to have line break before binary operator
-  page_loader/download.py: W503
+  page_loader/parser.py: W503
+  # it is possibble to have `%` string formatting
+  page_loader/logger.py: WPS323
 
 [tool:pytest]
 norecursedirs = __pycache__
