add download progress

--- a/setup.cfg
+++ b/setup.cfg
@@ -17,14 +17,13 @@ ignore =
   DAR101, DAR201, DAR401
 
 per-file-ignores =
-  # it is possibble to have prints in scripts
+  # it is possibble to have 'print' function
   page_loader/scripts/*.py: WPS421
+  page_loader/progress.py: WPS421
   # it is possibble to have variable and logic in __init__
   page_loader/__init__.py: WPS410, WPS412
   # it is possibble to have line break before binary operator
   page_loader/parser.py: W503
-  # it is possibble to have `%` string formatting
-  page_loader/logger.py: WPS323
 
 [tool:pytest]
 norecursedirs = __pycache__
