--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "hexlet-code"
-version = "0.3.1"
+version = "0.4.0"
 description = "Page Loader (Hexlet Python Project Level 3)"
 authors = ["neihaoo <neihaoo@gmail.com>"]
 repository = "https://github.com/neihaoo/python-project-lvl3"
@@ -14,6 +14,7 @@ packages = [
 [tool.poetry.dependencies]
 python = "^3.8"
 beautifulsoup4 = "^4.10.0"
+progress = "^1.6"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.1"
