--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ wemake-python-styleguide = "^0.16.1"
 requests-mock = "^1.9.3"
 
 [tool.poetry.scripts]
-page_loader = "page_loader.scripts.page_loader:main"
+page-loader = "page_loader.scripts.page_loader:main"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
