--- a/setup.cfg
+++ b/setup.cfg
@@ -19,11 +19,15 @@ ignore =
 per-file-ignores =
   # it is possibble to have 'print' function
   page_loader/scripts/*.py: WPS421
-  page_loader/progress.py: WPS421
   # it is possibble to have variable and logic in __init__
   page_loader/__init__.py: WPS410, WPS412
-  # it is possibble to have line break before binary operator
-  page_loader/parser.py: W503
+  # it is possibble to have `%` string formatting
+  page_loader/logger.py: WPS323
+  # it is possibble to have `%` string formatting
+  # and to have 'try' body length more than 1
+  page_loader/download.py: WPS323, WPS229
+  # it is possibble to have local variables more than 5
+  page_loader/parser.py: WPS210
 
 [tool:pytest]
 norecursedirs = __pycache__
