--- a/setup.cfg
+++ b/setup.cfg
@@ -23,9 +23,9 @@ per-file-ignores =
   page_loader/__init__.py: WPS410, WPS412
   # it is possibble to have `%` string formatting
   page_loader/logger.py: WPS323
-  # it is possibble to have `%` string formatting
-  # and to have 'try' body length more than 1
-  page_loader/download.py: WPS323, WPS229
+  # it is possibble to have `%` string formatting,
+  # 'try' body length more than 1 and local variables more than 5
+  page_loader/download.py: WPS323, WPS229, WPS210
   # it is possibble to have local variables more than 5
   page_loader/parser.py: WPS210
 
